# dinamika

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
dinamika/: CHANGELOG.md  Cargo.toml  README.md
dinamika-core/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
dinamika-core/src/: easing.rs  lib.rs  output.rs
dinamika-core/src/render/: measure.rs  mod.rs  paint.rs
dinamika-core/src/shape/: code.rs  layout.rs  mod.rs  text.rs  tween.rs
dinamika-core/src/signal/: computed.rs  mod.rs  tweenable.rs
dinamika-core/src/timeline/: action.rs  mod.rs  tween.rs
dinamika-cpu/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
dinamika-cpu/src/: color.rs  geometry.rs  lib.rs
dinamika-cpu/src/paint/: blend.rs  gradient.rs  mod.rs  pattern.rs
dinamika-cpu/src/path/: mod.rs  stroke.rs
dinamika-cpu/src/pixmap/: decode.rs  encode.rs  mod.rs
dinamika-cpu/src/raster/: mask.rs  mod.rs
dinamika-cpu/src/text/: mod.rs  outline.rs
dinamika/src/: lib.rs
