[package]
name = "dinamika-core"
description = "Declarative animation library: flex-based shapes, reactive signals, and a timeline (pause/parallel/sequence) on top of the dinamika-cpu raster renderer."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Timothy Myasnikov"]
repository = "https://github.com/aviancode/dinamika"
homepage = "https://github.com/aviancode/dinamika"
documentation = "https://docs.rs/dinamika-core"
readme = "README.md"
keywords = ["animation", "declarative", "signals", "timeline", "motion"]
categories = ["graphics", "rendering", "multimedia"]
# Only the crate itself ships to crates.io — keep build artifacts and editor
# files out of the package.
exclude = ["/target", "/.gitignore"]

[lib]
path = "src/lib.rs"

[dependencies]
dinamika-cpu = { path = "../dinamika-cpu", version = "0.1.0" }

syntect = { version = "5.3", default-features = false, features = ["parsing", "default-syntaxes", "regex-fancy"] }