[package]
name = "dinamika-cpu"
description = "A raster 2D renderer: pixmap, path, paint and anti-aliased drawing."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
png = "0.17"

# Zero-allocation TrueType/OpenType parser used to extract glyph outlines and
# metrics for text rendering (see the `text` module).
ttf-parser = "0.25"