[package]
name = "dinamika"
description = "Umbrella crate for the dinamika toolkit: re-exports the dinamika-cpu raster renderer and the dinamika-core declarative animation library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Timothy Myasnikov"]
repository = "https://github.com/aviancode/dinamika"
homepage = "https://github.com/aviancode/dinamika"
documentation = "https://docs.rs/dinamika"
readme = "README.md"
keywords = ["animation", "graphics", "rendering", "declarative", "2d"]
categories = ["graphics", "rendering", "multimedia"]

[lib]
path = "src/lib.rs"

[dependencies]
dinamika-cpu = { path = "../dinamika-cpu", version = "0.1.0" }
dinamika-core = { path = "../dinamika-core", version = "0.1.0" }
